2007-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/watchdogtickle.c: Remove tabs.

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1259/rtems
	* rtems/src/taskcreate.c: Initialize is_global in all cases since
	memory is not guaranteed to be zero.

2007-09-12  Sergei Organov  <osv@javad.com>

	PR 1258/rtems
	* cpukit/score/src/heapallocatealigned.c (block_allocate): New routine.
	* cpukit/score/src/heapallocatealigned.c (_Heap_Allocate_aligned):
	Use block_allocate() instead of _Heap_Block_allocate(). Replace
	_Heap_Head(the_heap)->next with equivalent _Heap_First(the_heap).
	* cpukit/score/src/heap.c (_Heap_Allocate): fix comments according
	to changed block split strategy in _Heap_Allocate_aligned().

2007-09-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/printk.c: Remove unnecessary comments.

2007-09-10	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libmisc/monitor/mon-monitor.c:
	Corrected linked list of rtems_monitor_commands

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc.c: If RTEMS_HEAP_DEBUG is defined, add heap
	walk on init, malloc, and free. The ability to walk the heap appears
	to disappeared during the rework of the C Program heap to skip the
	Region.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/heap.c: Style.
	* score/src/heapwalk.c: Add more information to prints.
	* score/src/pheapwalk.c: Do not lock allocator mutex if dispatching
	is disabled.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am, libcsupport/src/printk.c:
	* libcsupport/src/printk_plugin.c: New file.
	include/rtems/bspIo.h, libmisc/cpuuse/cpuusagereport.c,
	libmisc/cpuuse/cpuuse.h, libmisc/stackchk/check.c,
	libmisc/stackchk/stackchk.h: rtems/include/rtems/rtems/ratemon.h,
	rtems/src/ratemonreportstatistics.c: Added capability to specify
	your own "printf" routine to various reporting functions.  This